--- a/extensions/click-collect-modal/blocks/index.liquid
+++ b/extensions/click-collect-modal/blocks/index.liquid
@@ -1,3 +1,4 @@
+<script>window.hostname = '{{ shop.permanent_domain }}';</script>
 {% liquid unless template == "cart"
     render 'global-popup'
     else
